[build-system]
requires = [
    "numpy>=1.15,<1.16; python_version=='3.6'",
    "numpy>=1.15,<1.16; python_version=='3.7'",
    "numpy>=1.16,<1.17; python_version=='3.8'",
    "numpy>=1.19,<1.20; python_version=='3.9'",
    "numpy>=1.21,<1.22; python_version=='3.10'",
    "scipy>=1.1.0",
    "pybind11>=2.4",
    "setuptools",
    "wheel"
]