
[project]
name = "diffcp"
version = "1.1.4"
description = "A library to compute gradients for convex optimization problems"
requires-python = ">= 3.10"

readme = "README.md"

dependencies = [
    "threadpoolctl >= 1.1",
]
urls = {Homepage = "https://github.com/cvxgrp/diffcp/"}
license = {text = "Apache License, Version 2.0"}

[build-system]
requires = [
    "numpy>=2.0",
    "scipy>=1.1.0",
    "pybind11>=2.4",
    "setuptools >= 68.1.0",
    "pytest",
    "wheel",
    "scikit-build-core",
    "pybind11",
]
build-backend = "scikit_build_core.build"

[project.optional-dependencies]
test = [
    "clarabel >= 0.5.1",
    "ecos >= 2.0.10",
    "scs >= 3.0.0",
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
